--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,40 +5,35 @@
 :root {
   /* #region  /**=========== Primary Color =========== */
   /* !STARTERCONF Customize these variable, copy and paste from /styles/colors.css for list of colors */
-  --tw-color-primary-50: 240 249 255;
-  --tw-color-primary-100: 224 242 254;
-  --tw-color-primary-200: 186 230 253;
-  --tw-color-primary-300: 125 211 252;
-  --tw-color-primary-400: 56 189 248;
-  --tw-color-primary-500: 14 165 233;
-  --tw-color-primary-600: 2 132 199;
-  --tw-color-primary-700: 3 105 161;
-  --tw-color-primary-800: 7 89 133;
-  --tw-color-primary-900: 12 74 110;
-  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f0f9ff */
-  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #e0f2fe */
-  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #bae6fd */
-  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #7dd3fc */
-  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #38bdf8 */
-  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #0ea5e9 */
-  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #0284c7 */
-  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #0369a1 */
-  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #075985 */
-  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #0c4a6e */
+  --tw-color-primary-50: 245 243 255;
+  --tw-color-primary-100: 237 233 254;
+  --tw-color-primary-200: 221 214 254;
+  --tw-color-primary-300: 196 181 253;
+  --tw-color-primary-400: 167 139 250;
+  --tw-color-primary-500: 139 92 246;
+  --tw-color-primary-600: 124 58 237;
+  --tw-color-primary-700: 109 40 217;
+  --tw-color-primary-800: 91 33 182;
+  --tw-color-primary-900: 76 29 149;
+  --tw-color-primary-950: 46 16 101;
+  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f5f3ff */
+  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #ede9fe */
+  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #ddd6fe */
+  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #c4b5fd */
+  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #a78bfa */
+  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #8b5cf6 */
+  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #7c3aed */
+  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #6d28d9 */
+  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #5b21b6 */
+  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #4c1d95 */
+  --color-primary-950: rgb(var(--tw-color-primary-950)); /* #2e1065 */
   /* #endregion  /**======== Primary Color =========== */
 }
 
 @layer base {
   /* inter var - latin */
-  @font-face {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 100 900;
-    font-display: optional;
-    src: url('/fonts/inter-var-latin.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
-      U+2215, U+FEFF, U+FFFD;
+  html {
+    font-family: 'Montserrat', system-ui, sans-serif;
   }
 
   .cursor-newtab {
@@ -109,6 +104,9 @@
 }
 
 @layer utilities {
+  .animated-hover {
+    @apply transition-all delay-0 duration-200 ease-linear;
+  }
   .animated-underline {
     background-image: linear-gradient(#33333300, #33333300),
       linear-gradient(
