--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,28 +7,28 @@
 :root {
   /* #region  /**=========== Primary Color =========== */
   /* !STARTERCONF Customize these variable, copy and paste from /styles/colors.css for list of colors */
-  --tw-color-primary-50: 245 243 255;
-  --tw-color-primary-100: 237 233 254;
-  --tw-color-primary-200: 221 214 254;
-  --tw-color-primary-300: 196 181 253;
-  --tw-color-primary-400: 167 139 250;
-  --tw-color-primary-500: 139 92 246;
-  --tw-color-primary-600: 124 58 237;
-  --tw-color-primary-700: 109 40 217;
-  --tw-color-primary-800: 91 33 182;
-  --tw-color-primary-900: 76 29 149;
-  --tw-color-primary-950: 46 16 101;
-  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f5f3ff */
-  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #ede9fe */
-  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #ddd6fe */
-  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #c4b5fd */
-  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #a78bfa */
-  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #8b5cf6 */
-  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #7c3aed */
-  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #6d28d9 */
-  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #5b21b6 */
-  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #4c1d95 */
-  --color-primary-950: rgb(var(--tw-color-primary-950)); /* #2e1065 */
+  --tw-color-primary-50: 255 247 237;
+  --tw-color-primary-100: 255 237 213;
+  --tw-color-primary-200: 254 215 170;
+  --tw-color-primary-300: 253 186 116;
+  --tw-color-primary-400: 251 146 60;
+  --tw-color-primary-500: 249 115 22;
+  --tw-color-primary-600: 234 88 12;
+  --tw-color-primary-700: 194 65 12;
+  --tw-color-primary-800: 154 52 18;
+  --tw-color-primary-900: 124 45 18;
+  --tw-color-primary-950: 67 20 7;
+  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #fff7ed */
+  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #ffedd5 */
+  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #fed7aa */
+  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #fdba74 */
+  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #fb923c */
+  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #f97316 */
+  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #ea580c */
+  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #c2410c */
+  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #9a3412 */
+  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #7c2d12 */
+  --color-primary-950: rgb(var(--tw-color-primary-950)); /* #431407 */
   /* #endregion  /**======== Primary Color =========== */
 }
 
@@ -48,18 +48,44 @@
   /* Wrapper */
 
   .root-wrapper {
-    @apply flex flex-col justify-center gap-8 bg-red-100 py-4;
+    @apply flex min-h-[calc(100vh-64px)] flex-col justify-start gap-10 overflow-hidden py-4;
   }
 
   .inner-wrapper {
-    @apply w-full bg-green-400 px-4 py-2;
+    @apply w-full px-4 py-2;
   }
 
   .container-wrapper {
-    @apply container mx-auto bg-yellow-200 p-4;
+    @apply container mx-auto p-4;
   }
 
   /* End Wrapper */
+
+  /* #frame  /**=========== Frame =========== */
+  .profile-frame {
+    @apply translate-x-3;
+  }
+
+  .shadow-profile-frame {
+    @apply translate-x-5 translate-y-3;
+  }
+
+  .cat-frame {
+    @apply -translate-x-4 translate-y-3;
+  }
+
+  .blub-frame {
+    @apply -translate-x-5 translate-y-3;
+  }
+
+  .book-frame {
+    @apply -translate-x-4 translate-y-10;
+  }
+
+  .verse-frame {
+    @apply translate-x-5 translate-y-3;
+  }
+  /* #endFrame  /**======== EndFrame =========== */
 
   /* #region  /**=========== Typography =========== */
   .h0 {
