--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,15 +48,19 @@
   /* Wrapper */
 
   .root-wrapper {
-    @apply flex min-h-[calc(100vh-64px)] flex-col justify-start gap-10 overflow-hidden py-4;
+    @apply flex min-h-[calc(100vh-64px)] flex-col justify-start gap-12 overflow-hidden py-4;
   }
 
   .inner-wrapper {
-    @apply w-full px-4 py-2;
+    @apply w-full px-2 py-0 md:px-4 md:py-2;
   }
 
   .container-wrapper {
-    @apply container mx-auto p-4;
+    @apply container mx-auto px-4 py-4 md:px-8 md:py-6;
+  }
+
+  .y-padding {
+    @apply py-6 md:py-16;
   }
 
   /* End Wrapper */
@@ -116,12 +120,15 @@
   .p {
     @apply font-primary text-sm md:text-base;
   }
+
+  .text-gradient {
+    @apply from-orangePrimary bg-gradient-to-tr to-orange-300 bg-clip-text text-transparent drop-shadow-lg;
+  }
   /* #endregion  /**======== Typography =========== */
 
   .layout {
     /* 1100px */
-    max-width: 1280px;
-    @apply mx-auto w-11/12;
+    @apply container mx-auto px-4 py-4 md:px-8 md:py-6;
   }
 
   .bg-dark a.custom-link {
